syntax = "proto3";

package chatpb;

option go_package = "/examples/chat-rooms/chatpb";

message ChatMessage {
    string sender = 1;
    int64 sendTime = 2;
    string content = 3;
}

message ChatChannelData {
    repeated ChatMessage chatMessages = 1;
}